@@ -232,6 +232,7 @@ Ronen Mashal
 Russell Gold
 Sam Ruby
 Scott Carlson
+Scott Ellsworth
 Scott M. Stirling
 Sean Egan
 Sean P. Kane
