@@ -925,6 +925,10 @@
   </name>
   <name>
     <first>Scott</first>
+    <last>Ellsworth</last>
+  </name>
+  <name>
+    <first>Scott</first>
     <middle>M.</middle>
     <last>Stirling</last>
   </name>
