@@ -98,6 +98,15 @@ equivalent to an <code>&lt;and&gt;</code> selector container.</p>
       true. See the note <a href="#symlink">below</a>.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">erroronmissingdir</td>
+    <td valign="top">
+      Specify what happens if the base directory does not exist.
+      If true a build error will happen, if false, the fileset
+      will be ignored.
+      true.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 
 <p><a name="symlink"><b>Note</b></a>: All files/directories for which
